@@ -1,4 +1,6 @@
 Verion 0.9.41dev (?? ??? ???)
+  - Fixed bug 680626: Fix attempt too insert duplicate entries in the
+    database.
   - Fixed bug 715823: email notification on repeating events was using
     original event date rather than date for notification
   - Fixed bug 727616: conflict not working on repeating events
